# Cosys-AirSim

./: build.sh  setup.sh
MavLinkCom/src/: Semaphore.cpp
PythonClient/cosysairsim/: client.py
cmake/: CMakeLists.txt
cmake/cmake-modules/: CommonSetup.cmake
cmake/rpclib_wrapper/: CMakeLists.txt
ros2/src/airsim_interfaces/: CMakeLists.txt
ros2/src/airsim_interfaces/srv/: SimAddVehicle.srv
ros2/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
ros2/src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
